jruby 1.9 test code