@@ -1,9 +1,10 @@
 #!/bin/sh
 if [ "$1" = "full" ]; then
   rake rawr:clean
-fi
+fi 
 rake rawr:jar
-#java -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Djruby.reify.classes=true -Djruby.compat.version="1.9" \
+
+#"-Djruby.compat.version=1.9" \
 java -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Djruby.reify.classes=true  \
-  -Xms512m -Xmn128m \
--client -Xverify:none  -Xbootclasspath/a:lib/java/jruby-complete.jar -jar package/jar/fire-app.jar
+-Xms512m -Xmn128m \
+-client -Xverify:none  -Xbootclasspath/a:lib/java/jruby-complete.jar -jar package/jar/fire-app.jar --1.9
